<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI</string>
    <string name="hello_world">Your Input</string>
    <string name="Height">Your Height</string>
    <string name="Mass">Your Mass</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="Headerprofiel">Your BMI Info</string>
    <string name="Index:">Index:</string>
    <string name="Category:">Category:</string>
    <string name="DummyIndex">enter your info first</string>
    <string name="DummyCategory">enter your info first</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
