<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtHeight"

        android:layout_alignParentStart="true"
        android:text="@string/Height" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtMass"
        android:layout_below="@+id/txtHeight"
        android:layout_alignParentStart="true"
        android:text="@string/Mass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        android:id="@+id/btnUpdate"
        android:layout_below="@+id/txtMass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Headerprofiel"
        android:id="@+id/checkedTextView"
        android:layout_below="@+id/btnUpdate"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/checkedTextView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnUpdate"
        android:id="@+id/space" />

    <ImageView
        android:id="@+id/imgBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:src="@drawable/silhouette_1" />

    <TextView
        android:id="@+id/txtIndexDummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgBMI"
        android:layout_toRightOf="@+id/imgBMI"
        android:text="Index:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtIndex"
        android:text="@string/DummyIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtIndexDummy"
        android:layout_toRightOf="@+id/txtIndexDummy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/CategoryDummy"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtIndexDummy"
        android:layout_below="@+id/txtIndexDummy"
        android:text="Category:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:text="@string/DummyCategory"
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CategoryDummy"
        android:layout_toRightOf="@+id/CategoryDummy"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>
